Created Accounts class. Restructered start.html & about.html

--- a/app/views/start.html
+++ b/app/views/start.html
@@ -5,9 +5,15 @@
 
 <section class="ui center aligned middle aligned segment">
   <h1 class="ui header">
-    Welcome to Template 1
+    Welcome to your personalised Gym Application!
   </h1>
   <p>
-    To be replaced with content...
+    This gym app will allow you to keep track of your health and fitness goals.
+  </p>
+  <p>
+    You can receive feedback from professional trainers and find the motivation to continue with your own training plan!
+
+    <img  src="../../public/images/gym-icons.jpg">
+
   </p>
 </section>
