--- a/app/views/about.html
+++ b/app/views/about.html
@@ -3,8 +3,33 @@
 
 #{menu id:"about"/}
 
-<section class="ui center aligned middle aligned segment">
-  <p>
-    About this app
+<section class="ui segment">
+  <div class="ui centered grid">
+
+    <div class="row">
+
+      <div class="middle aligned eight wide column">
+
+  <p class="ui centre aligned header">
+    BMI Tracker
   </p>
+    <div class="ui horizontal divider header">
+      <i class="huge bar chart icon"></i>
+    </div>
+  <p>
+    Fill in your assessments week by week and track your BMI.
+    Trainers will comment on your progress and encourage you to keep going!
+  </p>
+    </div>
+    <div class="eight wide column">
+    <section>
+      <img class="ui large image" src="../../public/images/gym-icons4.png">
+    </section>
+
+    </div>
+
+    </div>
+
+    </div>
+
 </section>
