--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -5,7 +5,7 @@
 
 <section class="ui raised segment">
   <header class="ui header">
-    Todo List
+    Gym App
   </header>
   <table class="ui fixed table">
     <thead>
