--- a/app/views/login.html
+++ b/app/views/login.html
@@ -7,12 +7,14 @@
         <form class="ui stacked segment form" action="/authenticate" method="POST">
             <h3 class="ui header">Log-in</h3>
             <div class="field">
-                <label>Email</label> <input placeholder="Email" name="email">
+                <label> Email </label>
+                <input placeholder="Email" name="email">
             </div>
             <div class="field">
-                <label>Password</label> <input type="password" name="password">
+                <label> Password </label>
+                <input type="password" name="password">
             </div>
-            <button class="ui blue submit button"> Sign Up </button>
+            <button class="ui blue submit button"> Log In </button>
         </form>
     </div>
 
