Fixed bug keeping members from logging in

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -8,11 +8,11 @@
             <h3 class="ui header">Log-in</h3>
             <div class="field">
                 <label> Email </label>
-                <input placeholder="Email" name="email">
+                <input placeholder="Email" type="text" name="email">
             </div>
             <div class="field">
                 <label> Password </label>
-                <input type="password" name="password">
+                <input placeholder="Password" type="text" name="password">
             </div>
             <button class="ui blue submit button"> Log In </button>
         </form>
