--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -4,33 +4,84 @@
 #{menu id:"dashboard"/}
 
 <section class="ui raised segment">
-    <header class="ui header">
-        Assessments
+    <header class="ui center aligned header">
+        ${member.firstName} ${member.lastName}'s Assessments
     </header>
-    <table class="ui fixed table">
+
+    <div class="ui center aligned middle aligned segment">
+        <div class="ui four column grid">
+            <div class="column">
+                <i class="huge user icon"></i>
+                <h3>${member.firstName} ${member.lastName}</h3>
+            </div>
+            <div class="column">
+                <i class="huge dashboard icon"></i>
+                <h3>Ideal Weight Indicator</h3>
+            </div>
+            <div class="column">
+                <i class="huge heartbeat icon"></i>
+                <h3>BMI</h3>
+            </div>
+            <div class="column">
+                <i class="huge doctor icon"></i>
+                <h3></h3>
+            </div>
+        </div>
+    </div>
+
+
+    <div class="ui basic middle aligned segment">
+        <form class="ui stacked segment form" name="addAssessment" action="/dashboard/addassessment" method="POST">
+            <div class="three fields">
+                <div class="field">
+                    <label> Weight </label>
+                    <input placeholder="00.00kg" type="text" patter="\d.*" name="weight">
+                </div>
+                <div class="field">
+                    <label> Chest </label>
+                    <input placeholder="00.00cm" type="text" pattern="\d.*" name="chest">
+                </div>
+                <div class="field">
+                    <label> Thigh </label>
+                    <input placeholder="00.00cm" type="text" patten="\d.*" name="thigh">
+                </div>
+            </div>
+            <div class="three fields">
+                <div class="field">
+                    <label> Upper Arm </label>
+                    <input placeholder="00.00cm" type="text" pattern="\d.*" name="upperArm">
+                </div>
+                <div class="field">
+                    <label> Waist </label>
+                    <input placeholder="00.00cm" type="text" pattern="\d.*" name="waist">
+                </div>
+                <div class="field">
+                    <label> Hips </label>
+                    <input placeholder="00.00cm" type="text" pattern="\d.*" name="hips">
+                </div>
+            </div>
+
+            <button class="ui blue submit button"> Submit</button>
+
+        </form>
+    </div>
+
+    <table class="ui fixed center aligned table">
         <thead>
         <tr>
-            <th> Weight </th>
-            <th> Chest </th>
-            <th> Thigh </th>
-            <th> Upper Arm </th>
-            <th> Waist </th>
-            <th> Hips </th>
+            <th> Weight</th>
+            <th> Chest</th>
+            <th> Thigh</th>
+            <th> Upper Arm</th>
+            <th> Waist</th>
+            <th> Hips</th>
         </tr>
         </thead>
         <tbody>
         <tr>
-            <td> </td>
+            <td> ${}</td>
         </tr>
         </tbody>
     </table>
 
 </section>
-
-<form class="ui stacked segment form" action="/dashboard/addtodo" method="POST">
-    <div class="field">
-        <label>Title</label>
-        <input placeholder="Title" type="text" name="title">
-    </div>
-    <button class="ui blue submit button">Add Todo</button>
-</form>
