--- a/app/views/tags/welcomemenu.html
+++ b/app/views/tags/welcomemenu.html
@@ -3,6 +3,7 @@
     <div class="right menu">
         <a id="signup" class="item" href="/signup"> Sign Up </a>
         <a id="login" class="item" href="/login"> Login </a>
+        <a id="trainerlogin" class="item" href="/trainerlogin"><i class="ui user icon"></i></a>
     </div>
 </nav>
 
