Trainer authentication method added. Trainer dashboard added.

--- a/app/views/admin.html
+++ b/app/views/admin.html
@@ -14,7 +14,7 @@
     </thead>
     <tbody>
     <div class="ui bulleted list">
-      #{list items:assessment, as:'todo'}
+      #{list items:assessment, as:'assessment'}
         <tr>
           <td> ${assessment.id} </td>
           <td> ${assessment.title} </td>
