--- a/app/views/trainerDashboard.html
+++ b/app/views/trainerDashboard.html
@@ -16,7 +16,9 @@
                 ${members.assessment.size()} assessments
             </td>
             <td class="right aligned">
-                <i class="large red trash icon"></i>
+                <a href="">
+                    <i class="large red trash icon"></i>
+                </a>
             </td>
         </tr>
         #{/list}
