--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -94,7 +94,7 @@
             <td><i class="large ${assessment.getTrend()} arrow circle left icon"></i></td>
             <td>${assessment.comment}</td>
             <td>
-                <a href="/dashboard/${member.id}/deleteassessment/${assessment.id}" >
+                <a href="/dashboard/deleteassessment/${assessment.id}">
                     <i class=" large red trash icon"></i>
                 </a>
             </td>
