--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:'About' /}
 
-#{menu id:"about"/}
+#{welcomemenu id:"about"/}
 
 <section class="ui segment">
   <div class="ui centered grid">
