--- a/app/views/dashboard.html
+++ b/app/views/dashboard.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
 
-            <button class="ui blue submit button"> Submit</button>
+            <button class="ui blue submit button"> Add Assessment </button>
 
         </form>
     </div>
