--- a/app/views/tags/menu.html
+++ b/app/views/tags/menu.html
@@ -2,7 +2,7 @@
   <header class="ui header item"> <a href="/"> Gym App </a></header>
   <div class="right menu">
     <a id="dashboard" class="item" href="/dashboard"> Dashboard  </a>
-    <a id="about" class="item" href="/about"> About </a>
+    <a id="account" class="item" href="/account"> Account </a>
     <a id="logout" class="item" href="/logout"> Logout </a>
   </div>
 </nav>
