Fixed Bug not causing new members to load into Trainer Array Lists. Small updates

--- a/app/views/assessment.html
+++ b/app/views/assessment.html
@@ -1,7 +1,7 @@
 #{extends 'main.html' /}
 #{set title:'Member Assessments' /}
 
-#{menu id:"assessment"/}
+#{trainerMenu id:"assessment"/}
 
 <section class="ui raised segment">
     <header class="ui center aligned header">
