--- a/app/views/signup.html
+++ b/app/views/signup.html
@@ -47,11 +47,11 @@
             <div class="two fields">
                 <div class="required field">
                     <label> Height </label>
-                    <input placeholder="Height(in Metres)..." type="text" pattern="\d.*" name="height" required>
+                    <input placeholder="Height(in Metres)..." type="number" step=".01" min="1" max="3" name="height" required>
                 </div>
                 <div class="required field">
                     <label> Current Starting Weight </label>
-                    <input placeholder="Starting Weight(in KGs)..." type="text" pattern="\d.*" name="startingWeight" required>
+                    <input placeholder="Starting Weight(in KGs)..." type="number" step=".01" min="35" max="250" name="startingWeight" required>
                 </div>
             </div>
 
